# Bit-Indie

./: .env.example  .gitignore  AGENTS.md  CODEBASE_HEALTH_REPORT.md  CONTRIBUTING.MD  MVPBUILDPLAN.MD  README.md  STATUS.md  package-lock.json  package.json
apps/api/: Dockerfile  README.md  RUNBOOKS.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202407090001_create_core_tables.py  202407090002_update_game_active_default.py  202407090003_add_download_audit_log.py  202407090007_create_zaps_table.py  (+18 more)
apps/api/tests/: test_admin_moderation.py  test_admin_refunds.py  test_admin_stats.py  test_api_health.py  test_auth.py  test_auth_login.py  test_comments.py  test_community_forum.py  test_core_config_database.py  test_core_config_nostr.py  test_core_config_storage.py  test_core_logging.py  test_core_telemetry.py  test_db_session.py  test_developers.py  test_games.py  test_moderation_flags.py  test_payments_configuration.py  test_purchases.py  test_reviews.py  test_services_comment_thread.py  test_services_comment_thread_utils.py  test_services_game_drafting.py  test_services_game_promotion.py  test_services_game_publication.py  test_services_nostr_publisher.py  test_services_purchase_downloads.py  test_services_purchase_payouts.py  test_services_purchase_workflow.py  test_services_review_ranking.py  test_services_session_tokens.py  test_services_storage_policy.py  test_services_zap_ledger.py  test_storage_service.py  test_users.py  test_workers_release_note_ingestor.py  test_zap_receipts.py  test_zap_summary.py
(+322 files in other folders)
