[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proof-of-play-api"
version = "0.1.0"
description = "FastAPI service for the Proof of Play marketplace."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Proof of Play"}]
dependencies = [
    "fastapi>=0.110,<0.112",
    "pydantic>=2.7,<3.0",
    "sqlalchemy>=2.0,<2.1",
    "alembic>=1.13,<2.0",
    "psycopg[binary]>=3.1,<3.2",
    "uvicorn[standard]>=0.29,<0.31",
    "boto3>=1.34,<1.35",
    "httpx>=0.27,<0.29"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1,<9.0"
]

[tool.setuptools.packages.find]
where = ["src"]
